--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			
 		<div class="social-icons">
 			<a href="#"><i class='bx bxl-linkedin-square' ></i>
-			<a href="#"><i class='bx bxl-instagram-alt' ></i>
+			<a href="https://www.instagram.com/rohan_chauhan_666/profilecard/?igsh=emF3am5nMGhoM2t1"><i class='bx bxl-instagram-alt' ></i>
 			<a href="#"><i class='bx bxl-facebook-square' ></i>
 			<a href="#"><i class='bx bxl-twitter' ></i>
 		</div>
